add error handling

--- a/DailyStandup.Api/appsettings.Development.json
+++ b/DailyStandup.Api/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DailyStandup": "Server=172.17.0.4;Port=5432;Database=DailyStandup;UserId=DailyStandupDev;Password=DailyStandupDev;"
   }
 }
