--- a/DailyStandup.Contract/DailyStandup.Contract.csproj
+++ b/DailyStandup.Contract/DailyStandup.Contract.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="10.3.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DailyStandup.Infrastructure\DailyStandup.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
