--- a/DailyStandup.Infrastructure/DailyStandup.Infrastructure.csproj
+++ b/DailyStandup.Infrastructure/DailyStandup.Infrastructure.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
   </ItemGroup>
 
